# EZShell

./: CMakeLists.txt  cmds.c  ezshell.c  ezshell.h  linuxgcc.cmake  main.c  mingw.cmake  readme.md
